# sava

./: .gitignore  README.md  pyproject.toml
sava/: _pw_worker.py  auth.py  browser.py  server.py
sava/capabilities/: calendar.py  gdocs.py  gmail.py  tasks.py
